Render story as markdown (#3)
* Improve story view with spinner and HTML→Markdown description

- Add Spinner utility for terminal loading animation during API calls
- Add HtmlConverter utility wrapping flexmark HTML→Markdown conversion
- Add flexmark-html2md-converter dependency to cli/pom.xml
- Render story description as Markdown instead of raw JSON output
- Format story header with ANSI bold via picocli Ansi.AUTO
- Refactor AgilityQuery.Builder: replace builder(String) with builder()
  and a fluent .from(String) method for a cleaner call-site API
- Remove from() convenience method from AgilityQueryClient interface
- Move HelpMixin to cli/mixins package

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Rebase from main

* Fix Spinner.close() to not throw InterruptedException

Cleanup code in try-with-resources should always complete. Catch
InterruptedException from thread.join() internally and re-set the
interrupt flag on the calling thread to preserve interrupt status.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Add --json output option to story view

- Add JsonOutputMixin with --json flag supporting optional field selection
  via comma-separated values (e.g. --json Name,Number,Description)
- Refactor ViewStoryCommand to use mixin, remove Story record and
  @RegisterReflectionForBinding in favour of Map-based queries
- Refactor AgilityQuery.Builder: select() is now a setter, build() is
  the terminal method
- Add TypeReference<T> overload to AgilityQueryClient for type-safe
  deserialization of parameterized types (e.g. Map<String, Object>)
- Refactor DefaultAgilityQueryClient to share HTTP + parsing logic
  across both query overloads
- Update tests to cover both Class<T> and TypeReference<T> query paths

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix native crash, simplify --json option, add tests

- Fix FlexmarkHtmlConverter static initializer crash in native image
  by adding --i